# GaugeAnything

./: .dockerignore  .gitignore  CITATION.cff  DATASETS.md  DESIGN.md  Dockerfile  MODELS.md  README.md  STATUS.md  pyproject.toml
benchmark/: LEADERBOARD.md  README.md  collect_results.py  expected_v1.json
data/: DATA_ACQUISITION.md  REAL_MM_SOURCES.md  model_training_manifest.json  physical_coverage_matrix.json
docs/: AGENTIC_LOOP_DESIGN.md  ARXIV_SUBMISSION_CHECKLIST.md  CAPTURE_PROTOCOL.md  DYNAMIC_METROLOGY_DESIGN.md  EDA_REPORT.md  MODEL_RESEARCH_ROADMAP.md  PHYSICAL_COVERAGE_MATRIX.md  README.md  RESEARCH_AUDIT_AND_NEXT_EXPERIMENTS.md  RESEARCH_POSITION_AND_ROADMAP.md  RIGOR_AUDIT.md  SOFT_INSPECTION.md  VERIFICATION_AUDIT.md  WIDTH_BOTTLENECK_ANALYSIS.md  eda_report.html  index.html
experiments/: RESULTS.md  adt_atek_box_dimension_upper.py  adt_atek_depth_upper.py  adt_atek_projection_audit.py  coins_mm_eval.py  crack_kenburns_video.py  draem_uneven.py  eda_probe.py  eda_report.py  gauge_bench.py  gauge_bench_measure.py  gauge_demo.py  gauge_gallery.py  gauge_multidomain.py  known_object_demo_video.py  krkcmd_image_eval.py  krkcmd_loop_pathselect.py  krkcmd_loop_recovery.py  krkcmd_multiinstance_eval.py  krkcmd_profile_eval.py  krkcmd_signal_width.py  krkcmd_split_audit.py  m2_calibration_baseline.py  m2_refiner.py  m2_specialist_tabular.py  m2_uncertainty_conformal.py  m2v2_logit_threshold.py  make_print_board.py  matte_fray.py  physical_adapter_sprint.py  physical_coverage_report.py  prompt_ensemble_eval.py  prompt_sweep.py  real_mm_eval.py  sam3_probe.py  (+17 more)
(+88 files in other folders)
