[project]
name = "gaugeanything"
version = "0.1.0"
description = "Promptable quantitative inspection for industrial micro-vision: masks in, millimeters out."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "FalconEyes / Industrial Anything" }]
keywords = ["industrial-inspection", "metrology", "segmentation", "SAM3", "crack-detection", "measurement"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.22",          # skeletonize / marching squares (mask geometry)
    "opencv-contrib-python>=4.8",  # cv2.aruco + ximgproc guided filter (scale resolver, matting-lite)
    "pillow>=10.0",
]

[project.optional-dependencies]
# SAM 3 backbone + learned heads (GPU). On DGX Spark (GB10/aarch64) install torch from cu130 index.
gpu = [
    "torch>=2.9",
    "transformers>=5.10",   # Sam3Processor / Sam3Model
    "einops>=0.8",
]
bench = [
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "pyarrow>=15",
]

[project.urls]
Homepage = "https://github.com/falcons-eyes/GaugeAnything"
"Project Page" = "https://falcons-eyes.github.io/GaugeAnything/"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gaugeanything"]
